# multi-lang-poc

./: BUILD  BUILD.bazel  BUILD.bazel-node  CalculatorTest.java  README.md  bazel-bin  bazel-multi-lang-poc  bazel-out  bazel-testlogs  calculator.test.js  sonar-project.properties
.devcontainer/: devcontainer.json  install_bazel.sh
WORKSPACE/: BUILD.bazel
bazel/: BUILD.bazel
node/: package.json  sonar-project.properties
src/: BUILD.bazel
