load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# For Java dependencies (JUnit, JaCoCo, etc.)
http_archive(
    name = "rules_java",
    urls = ["https://github.com/bazelbuild/rules_java/releases/download/v5.0.0/rules_java-v5.0.0.tar.gz"],
    sha256 = "some-sha256-here",
)

# For Node.js dependencies (Jest, nyc, etc.)
http_archive(
    name = "rules_nodejs",
    urls = ["https://github.com/bazelbuild/rules_nodejs/releases/download/v3.1.0/rules_nodejs-v3.1.0.tar.gz"],
    sha256 = "some-sha256-here",
)
